[package]
name = "oof-controller"
version = "0.1.0"
authors = ["Jack O'Sullivan <jackos1998@gmail.com>"]
edition = "2018"

[dependencies]
enum_primitive = "~0.1"
quick-error = "~1.2"
log = "~0.4"
priority-queue = "~0.5"
petgraph = "~0.4"
bufstream = "~0.1"
bytes = "~0.4"
ipnetwork = "~0.13"
nix = "~0.12"
simplelog = "~0.5"
ctrlc = "~3.1"
oof-common = { path = "../oof-common" }
