[package]
name = "oof-router"
version = "0.1.0"
authors = ["Jack O'Sullivan <jackos1998@gmail.com>"]
edition = "2018"

[dependencies]
quick-error = "~1.2"
log = "~0.4"
nix = "~0.12"
ipnetwork = "~0.13"
bytes = "~0.4"
bufstream = "~0.1"
pnet = { path = "../../../libpnet" }
simplelog = "~0.5"
ctrlc = { version = "~3.1", features = [ "termination" ] }
oof-common = { path = "../oof-common" }

[features]
tcp_udp_checksum = []
